Fixed leaf styling content going out of box

--- a/client/src/components/modules/WoodenSign.css
+++ b/client/src/components/modules/WoodenSign.css
@@ -62,7 +62,7 @@
 
 .wooden-sign-buttons {
   position: absolute;
-  bottom: 40px;
+  margin-top: 10px;
   left: 49%;
   transform: translateX(-50%);
   display: flex;
@@ -198,7 +198,6 @@
   padding: 0.5rem;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 4px;
-  margin-top: 15px;
 }
 
 .wooden-sign-image-preview,
